test/spec_vectors/memory/fail/module_31.wat
(module (memory (import "M" "m") 0 4294967296))